--- a/app/src/main/res/layout/activity_add_date_for_goal.xml
+++ b/app/src/main/res/layout/activity_add_date_for_goal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".object.goal.activity.AddDateForGoalActivity">
+    tools:context=".ui.goal.AddDateForGoalActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
