--- a/app/src/main/res/layout/content_add_todo.xml
+++ b/app/src/main/res/layout/content_add_todo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".object.todo.activity.AddTodoActivity"
+    tools:context=".ui.todo.AddTodoActivity"
     tools:showIn="@layout/activity_add_todo">
 
     <EditText
