--- a/app/src/main/res/layout/content_all_goals.xml
+++ b/app/src/main/res/layout/content_all_goals.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="kaufland.com.todo.AllGoals"
+    tools:context="kaufland.com.todo.ui.goal.AllGoals"
     tools:showIn="@layout/activity_all_goals">
 
     <Button
