--- a/app/src/main/res/layout/content_all_todos.xml
+++ b/app/src/main/res/layout/content_all_todos.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="kaufland.com.todo.ui.todo.AllTodos"
+    tools:context="kaufland.com.todo.ui.todo.AllTodosActivity"
     tools:showIn="@layout/activity_all_todos">
 
     <ListView
